# HSE_bmp_Cpl

./: CMakeLists.txt  readme.md
files/: BMP.cpp  BMP.h  Filter.h  Filters.cpp  Filters.h  Image.cpp  Image.h  Pixel.cpp  Pixel.h  image_processor.cpp  image_processor.h  image_processor_impl.cpp
tests/: BMPTest.cpp  Constants.h  FilterTest.cpp  ImageTest.cpp  MainTest.cpp  PixelTest.cpp
